# pltwfinal

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  cmake_install.cmake  cmake_setup_toolchain  main.cpp
.github/workflows/: cmake-single-platform.yml
CAD/: keyboard setup v5.f3d  screen plate v3.f3d  updatedkey v3.f3d
common/: CMakeLists.txt  audio.cpp  audio.h  helpers.h  libmicrosynth.cpp  libmicrosynth.h  signalmeta.cpp  signalmeta.h  signals.cpp  signals.h  threaded_queue.cpp  threaded_queue.h  wavimport.cpp  wavimport.h
pisrc/: CMakeLists.txt  cmake_setup_toolchain  event_types.h  keyboard.cpp  keyboard.h  main_pi.cpp  ms_ads1115.cpp  ms_ads1115.h  pi_native.cpp  pi_native.h  toolchain.cmake
portaudio_aarch/lib/cmake/portaudio/: portaudioTargets-debug.cmake
portaudio_aarch/lib/pkgconfig/: portaudio-2.0.pc
portaudio_x64/lib/cmake/portaudio/: portaudioTargets-debug.cmake  portaudioTargets.cmake
portaudio_x64/lib/pkgconfig/: portaudio-2.0.pc
testsrc/: CMakeLists.txt  main_test.cpp  thread_scratchpad.cpp  thread_scratchpad.h
